gl31-master/src/test/deca/syntax/invalid/sansobjet/readInt_brackets.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 10 : Erreur, '()' manquant
//
// Historique:
//    cree le 12/01/2021
{
    int a = readInt;
}
